Format Code; Add EditorConfig;

--- a/BlazorLinuxAdmin/BlazorLinuxAdmin.csproj
+++ b/BlazorLinuxAdmin/BlazorLinuxAdmin.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BlazorPlus" Version="1.2.44" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
