--- a/BlazorLinuxAdmin/BlazorLinuxAdmin.csproj
+++ b/BlazorLinuxAdmin/BlazorLinuxAdmin.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AntDesign" Version="0.7.0" />
     <PackageReference Include="BlazorPlus" Version="1.2.44" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
