modify ignore package.lock.json

--- a/BlazorLinuxAdmin/BlazorLinuxAdmin.csproj
+++ b/BlazorLinuxAdmin/BlazorLinuxAdmin.csproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
   
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec WorkingDirectory="$(SolutionDir)" Command="npm install" />
     <Exec WorkingDirectory="$(SolutionDir)" Command="npm run gulp:less" />
   </Target>
 </Project>
